Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-116

SVN head does not compiler with MinGW compiler

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.10.0
    • 0.10.0
    • Build
    • None

    Description

      src/thread.cpp does not compile with MinGW gcc 3.2.3 reporting that Thread::run's implementation does not match its prototype though other compilers compile it successfully and I can see no obvious difference between prototype and implementation signature.

      Attachments

        Activity

          People

            carnold@apache.org Curt Arnold
            carnold@apache.org Curt Arnold
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: