LOGCXX-116: SVN head does not compile with MinGW compiler